[package]
name = "equinix-otel-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
init-tracing-opentelemetry = { version = "0.18", features = [
  "opentelemetry-otlp",
  "tracing_subscriber_ext",
] }
opentelemetry = "0.22"
tokio = { version = "1.37", features = ["tracing"] }
traceparent = "0.0.3"
tracing = "0.1"
tracing-futures = { version = "0.2", features = ["tokio"] }
